--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -4,4 +4,7 @@ block variables
   - var template = 'about'
 
 block content
-  h1.about__title About
+  .about
+    .about__wrapper
+      section.about__gallery
+        .about__gallery__wrapper
