--- a/views/partials/navigation.pug
+++ b/views/partials/navigation.pug
@@ -10,4 +10,4 @@ nav.navigation
         a.navigation__list__link(href="/about") About
 
       li.navigation__list__item
-        a.navigation__list__link(href="/collections") Collections
+        a.navigation__list__link(href="/") Collections
