--- a/views/base.pug
+++ b/views/base.pug
@@ -8,8 +8,8 @@ html(lang="en")
 
     base(href="/")
 
-    title Floema
-    meta(name="description" content="Floema Jewelry")
+    title=metadata.data.title
+    meta(name="description" content=metadata.data.description)
 
     //- favicons for every device
     link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
@@ -21,12 +21,12 @@ html(lang="en")
     meta(property="og:type" content="website")
     meta(property="og:title" content=metadata.data.title)
     meta(property="og:description" content=metadata.data.description)
-    meta(property="og:image" content=metadata.data.image ? meta.data.image.url : '')
+    meta(property="og:image" content=metadata.data.image ? metadata.data.image.url : '')
 
     meta(name="twitter:card" content="summary_large_image")
     meta(name="twitter:title" content=metadata.data.title)
     meta(name="twitter:description" content=metadata.data.description)
-    meta(name="twitter:image" content=metadata.data.image ? meta.data.image.url : '')
+    meta(name="twitter:image" content=metadata.data.image ? metadata.data.image.url : '')
 
     //- css
     link(href="main.css" rel="stylesheet")
