--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -8,3 +8,44 @@ block content
     .about__wrapper
       section.about__gallery
         .about__gallery__wrapper
+          each media in about.data.gallery
+            figure.about__gallery__media
+              img.about__gallery__media__image(src=media.image.url alt=media.image.alt)
+
+      //- every prismic slice I've created
+      each section in about.data.body
+        //- separating slices
+        if section.slice_type == 'title'
+          h2.about__title=section.primary.text
+
+        if section.slice_type == 'content'
+          section.about__content
+            .about__content__wrapper
+              p.about__content__label=section.primary.label
+
+              //- in this case the != helps pug to render what Prismic DOM is giving
+              //- if I delete the !, i se thee <p> tags in my output! Bc Pug doesn't recognize it
+              //- EVERY Prismic DOM element needs the ! before anything
+              .about__content__description!=PrismicDOM.RichText.asHtml(section.primary.description)
+
+              figure.about__content__media
+                img.about__content__media__img(src=section.primary.image.url alt=section.primary.image.alt)
+
+        if section.slice_type == 'highlight'
+          section.about__highlight
+            .about__highlight__wrapper
+              if section.primary.label
+                p.about__highlight__label
+
+              h3.about__highlight__title=section.primary.title
+
+              each media in section.items
+                figure.about__highlight__media
+                img.about__highlight__media__img(src=media.image.url alt=media.image.alt)
+
+        if section.slice_type == 'gallery'
+          section.about__gallery
+            .about__gallery__wrapper
+              each media in section.items
+                  figure.about__gallery__media
+                    img.about__gallery__media__image(src=media.image.url alt=media.image.alt)
