--- a/views/pages/detail.pug
+++ b/views/pages/detail.pug
@@ -4,4 +4,29 @@ block variables
   - var template = 'detail'
 
 block content
-  h1.detail__title Detail
+  .detail
+    .detail__wrapper
+      figure.detail__media
+        img.detail__media__image(src=product.data.image.url alt=product.data.image.alt)
+
+      .detail__information
+        p.detail__information__collection=product.data.collection.data.title
+
+        h1.detail__information__title=product.data.title
+
+        p.product__information__content
+          .detail__information__highlights
+            each highlight in product.data.highlights
+              p.detail__information__highlight
+                svg.detail__information__highlights__icon
+                  use(xlink:href=`sprite-${highlight.icon.toLowerCase()}`)
+
+                span.detail__information__highlight__text=highlight.highlights_text
+
+          .detail__information__list
+              each item in product.data.informations
+                p.detail__information__item
+                  strong.detail__information__item__title=item.informations_label
+                  span.detail__information__item__description=item.informations_description
+
+          a.detail__information__link(href=product.data.link_url.url target="_blank")=product.data.link_text
