styling pt1: preloader + detail page

--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -1,3 +1,13 @@
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+  user-select: none;
+}
+
+html{
+  font-size: calc((100vw / 1920)*10);
+}
 body{
   @extend %description-14;
 
@@ -7,4 +17,10 @@ body{
   @include media('<phone'){
     font-size: 100px;
   }
+}
+
+a{
+  color: inherit;
+  outline: none;
+  text-decoration: none;
 }
