--- a/styles/pages/details/details.scss
+++ b/styles/pages/details/details.scss
@@ -1,49 +1,92 @@
-.detail
-.detail__wrapper{
-
+.detail{
+  @extend %cover;
+  @extend %center;
+  background: $color-quicksand;
+  color: $color-white;
 }
-.detail__media{
+.detail__wrapper{
+  display: flex;
+  align-items: center;
+}
 
+
+.detail__media{
+  height: 78.2rem;
+  width: 55.4rem;
+  position: relative;
 }
 .detail__media__image{
-
+  @extend %cover;
+  object-fit: cover;
 }
-.detail__information{
 
+
+.detail__information{
+  padding-left: 8.2rem;
 }
 .detail__information__collection{
-
+  @extend %description-12;
+  text-transform: uppercase;
+  margin-bottom: 4rem;
 }
 .detail__information__title{
-
+  @extend %title-120;
+  max-width: 60rem;
 }
-.product__information__content{
-
+.detail__information__content{
+  padding-left: 18rem;
 }
 .detail__information__highlights{
-
+  margin-top: 6rem;
 }
 .detail__information__highlight{
+  display: flex;
+  align-items: center;
 
+  &:not(:first-child){
+    margin-top: 4rem;
+  }
 }
-.detail__information__highlights__icon{
 
+
+.detail__information__highlights__icon{
+  height: 4rem;
+  width: 4rem;
+  margin-right: 3.75rem;
+
+  //debug
+  border: 1px solid currentColor;
+  border-radius: 50%;
 }
 .detail__information__highlight__text{
-
+  @extend %description-16;
 }
 .detail__information__list{
-
+  margin-top: 4rem;
 }
-.detail__information__item{
 
+
+.detail__information__item{
+  display: flex;
+
+  &:not(:first-child){
+    margin-top: 4rem;
+  }
 }
 .detail__information__item__title{
+  @extend %description-12;
 
+  color: rgba($color-white, .4);
+  padding-right: 2.5rem;
+  width: 10rem;
 }
 .detail__information__item__description{
+  @extend %description-16;
 
+  max-width: 44rem;
 }
 .detail__information__link{
-
+  @extend %title-30;
+  margin-top: 3rem;
+  display: inline-block;
 }
