--- a/styles/shared/descriptions.scss
+++ b/styles/shared/descriptions.scss
@@ -1,13 +1,32 @@
 %description-12{
   font-size: 1.2rem;
+  line-height: 1.4rem;
+
+  @include media('<phone') {
+    font-size: 3rem;
+  }
 }
 
 %description-14{
   font-size: 1.4rem;
+
+  @include media('<phone') {
+    font-size: 3rem;
+  }
+}
+
+%description-16{
+  font-size: 1.6rem;
+  line-height: 1.5;
+  letter-spacing: 0.03rem;
 }
 
 %description-18{
   font-size: 1.8rem;
   font-weight: 300;
   line-height: 1.5;
+
+  @include media('<phone') {
+    font-size: 2.8rem;
+  }
 }
