--- a/styles/base/fonts.scss
+++ b/styles/base/fonts.scss
@@ -18,8 +18,8 @@
 
 @font-face {
   font-family: $font-suisse-bp;
-  src: url('../fonts/suisse-bp-intl-light.woff2') format('woff2'),
-      url('../fonts/suisse-bp-intl-light.woff') format('woff');
+  src: url('../fonts/suisse-bp-light.woff2') format('woff2'),
+      url('../fonts/suisse-bp-light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -27,8 +27,8 @@
 
 @font-face {
   font-family: $font-suisse-bp;
-  src: url('../fonts/suisse-bp-intl-ultra-light.woff2') format('woff2'),
-      url('../fonts/suisse-bp-intl-ultra-light.woff') format('woff');
+  src: url('../fonts/suisse-bp-ultra-light.woff2') format('woff2'),
+      url('../fonts/suisse-bp-ultra-light.woff') format('woff');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
