--- a/styles/components/preloader.scss
+++ b/styles/components/preloader.scss
@@ -1,9 +1,22 @@
 .preloader{
+  @extend %cover;
+  @extend %center;
+  background: $color-contessa;
+  color: $color-quarter-spanish-white;
+  text-align: center;
 
+  //for now
+  display: none;
 }
 .preloader__text{
-
+  @extend %title-53;
+  max-width: 66rem;
 }
-.preloader__number{
 
+.preloader__number{
+  @extend %description-14;
+  position: absolute;
+  bottom: 7.3rem;
+  left: 50%;
+  transform: translateX(-50%);
 }
