--- a/styles/utils/mixins.scss
+++ b/styles/utils/mixins.scss
@@ -12,6 +12,13 @@
   align-items: center;
 }
 
+%absolute-center{
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @mixin ratio ($height, $width) {
   font-size: 0;
   overflow: hidden;
