--- a/styles/shared/titles.scss
+++ b/styles/shared/titles.scss
@@ -28,6 +28,13 @@
 %title-100{
   font-family: $font-george-x;
   font-size: 10rem;
+  line-height: 1;
+}
+
+%title-110{
+  font-family: $font-george-x;
+  font-size: 11rem;
+  line-height: 1;
 }
 
 %title-120{
