--- a/styles/pages/about/gallery.scss
+++ b/styles/pages/about/gallery.scss
@@ -1,12 +1,33 @@
 .about__gallery{
+  height: 58.6rem;
+  margin: 15rem 0;
+  overflow: hidden;
+  pointer-events: none;
+  position: relative;
+  // visibility: hidden;
 
+  &:first-child {
+    margin-top: 0;
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 .about__gallery__wrapper{
-
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  align-items: center;
 }
 .about__gallery__media{
-
+  position: relative;
+  width: 30.9rem;
+  height: 43.7rem;
+  margin: 0 4rem;
 }
 .about__gallery__media__image{
-
+  @extend %cover;
+  object-fit: cover;
 }
