--- a/styles/layout/navigation.scss
+++ b/styles/layout/navigation.scss
@@ -1,12 +1,14 @@
 .navigation {
+  @extend %cover;
 
+  z-index: z('navigation');
+  color: $color-quarter-spanish-white;
 }
 
 .navigation__link {
   font-size: 0;
   height: 2rem;
   left: 4rem;
-  pointer-events: auto;
   position: absolute;
   top: 4rem;
   transition: opacity 0.4s ease;
@@ -26,19 +28,24 @@
 
 .navigation__link__icon {
   display: block;
+  top: 4rem;
+  left: 4rem;
 }
 
 .navigation__list {
-
-}
-
-.navigation__list__item {
-  pointer-events: auto;
   position: absolute;
-  right: 4rem;
   top: 4rem;
+  right: 4rem;
 }
+
+// .navigation__list__item {
+//   pointer-events: auto;
+//   position: absolute;
+//   right: 4rem;
+//   top: 4rem;
+// }
 
 .navigation__list__link {
-  display: block;
+  @extend %title-20;
+  // display: block;
 }
