--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -1,27 +1,86 @@
-.home{
+.home {
+  @extend %cover;
+  @extend %center;
 
-}
-.home__wrapper{
+  background: $color-contessa;
+  color: $color-quarter-spanish-white;
+  text-align: center;
 
-}
-.home__titles{
+  &:before,
+  &:after{
+    content: '';
+    height: 24rem;
+    width: 100%;
+    z-index: 1;
 
-}
-.home__titles__label{
+    position: absolute;
+    left: 0;
+  }
 
+  &:before{
+    background: linear-gradient(to bottom, $color-contessa 0%, rgba($color-contessa, 0) 100%);
+    top: 0;
+  }
+  &:after{
+    background: linear-gradient(to top, $color-contessa 0%, rgba($color-contessa, 0) 100%);
+    bottom: 0;
+  }
 }
-.home__titles__title{
 
+.home__wrapper {
+  // @extend %cover;
+  // overflow: hidden;
 }
+
+.home__titles {
+  @extend %vertical-titles;
+}
+
+.home__titles__title {
+  @extend %vertical-titles__title;
+}
+
+.home__titles__title__text {
+  @extend %vertical-titles__title__text;
+}
+
+
+.home__titles__label {
+  @extend %vertical-titles__label;
+}
+
+.home__titles__label__text {
+  @extend %vertical-titles__label__text;
+}
+
 .home__gallery{
 
 }
 .home__gallery__media{
-
+  position: absolute;
 }
 .home__gallery__media__image{
 
 }
 .home__link{
+  width: 32rem;
+  height: 6rem;
 
+  position: absolute;
+  left: 50%;
+  bottom: 5rem;
+  transform: translateX(-50%);
+
+  text-align: center;
+  letter-spacing: 0.05rem;
+  z-index: 2;
+
+  span{
+    @extend %description-14;
+    @extend %absolute-center;
+    text-transform: uppercase;
+    width: 100%;
+    height: 100%;
+    line-height: 6.5rem;
+  }
 }
