--- a/styles/utils/variables.scss
+++ b/styles/utils/variables.scss
@@ -12,7 +12,7 @@ $ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
 $ease-in-out: cubic-bezier(0.77, 0, 0.175, 1);
 
 $z-indexes: (
-  // 'preloader',
+  'preloader',
   // 'transition',
   'navigation',
   'content',
