--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -8,12 +8,20 @@ block content
     .home__wrapper
       .home__titles
         each collection, index in collections
-          .home__titles__label=`${home.data.collection} ${Numbers(index)}`
-          .home__titles__title=collection.data.title
+          .home__titles__label
+            .home__titles__label__text!=`${home.data.collection}<br>${Numbers(index)}`
+
+          .home__titles__title
+            .home__titles__title__text=collection.data.title
 
       .home__gallery
       each media in home.data.gallery
         figure.home__gallery__media
           img.home__gallery__media__image(src=media.image.url alt=media.image.alt)
 
-      a.home__link(href=Link(home.data.collections))=home.data.label
+      a.home__link(href=Link(home.data.collections))
+        span=home.data.label
+
+        svg.home__link__icon(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 288 60")
+          path(stroke="#fff" opacity="0.4" fill="none" d="M144,0.5c79.25,0,143.5,13.21,143.5,29.5S223.25,59.5,144,59.5S0.5,46.29,0.5,30S64.75,0.5,144,0.5z")
+          path(stroke="#fff" fill="none" d="M144,0.5c79.25,0,143.5,13.21,143.5,29.5S223.25,59.5,144,59.5S0.5,46.29,0.5,30S64.75,0.5,144,0.5z")
