--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -8,6 +8,10 @@
 html{
   font-size: calc((100vw / 1920)*10);
   line-height: 1;
+
+  @include media('<phone'){
+    font-size: calc((100vw / 750)*10);
+  }
 }
 body{
   @extend %description-14;
