--- a/styles/shared/descriptions.scss
+++ b/styles/shared/descriptions.scss
@@ -1,6 +1,6 @@
 %description-12{
   font-size: 1.2rem;
-  line-height: 1.4rem;
+  line-height: 1.4;
 
   @include media('<phone') {
     font-size: 3rem;
@@ -18,6 +18,10 @@
 %description-16{
   font-size: 1.6rem;
   line-height: 1.5;
+
+  @include media('<phone') {
+    font-size: 2.8rem;
+  }
 }
 
 %description-18{
