--- a/styles/shared/titles.scss
+++ b/styles/shared/titles.scss
@@ -1,6 +1,10 @@
-%title-20{
+%title-20 {
   font-family: $font-george-x;
   font-size: 2rem;
+
+  @include media('<phone') {
+    font-size: 4.8rem;
+  }
 }
 
 %title-24 {
@@ -8,43 +12,57 @@
   font-size: 2.4rem;
   letter-spacing: 0.1rem;
   line-height: 1;
+
+  @include media('<phone') {
+
+  }
 }
 
 %title-30 {
   font-family: $font-george-x;
   font-size: 3rem;
+
+  @include media('<phone') {
+    font-size: 5.2rem;
+  }
 }
 
-%title-53{
+%title-53 {
   font-family: $font-george-x;
   font-size: 5.3rem;
   line-height: 1;
 }
 
-%title-60{
+%title-60 {
   font-family: $font-george-x;
   font-size: 6rem;
 }
 
-%title-100{
-  font-family: $font-george-x;
-  font-size: 10rem;
-  line-height: 1;
-}
-
-%title-110{
+%title-110 {
   font-family: $font-george-x;
   font-size: 11rem;
-  line-height: 1;
+  line-height: 1.1;
+
+  @include media('<phone') {
+    font-size: 12rem;
+  }
 }
 
-%title-120{
+%title-120 {
   font-family: $font-george-x;
   font-size: 12rem;
   line-height: 0.82;
+
+  @include media('<phone') {
+    font-size: 18rem;
+  }
 }
 
-%title-200{
+%title-200 {
   font-family: $font-george-x;
   font-size: 20rem;
+
+  @include media('<=phone') {
+
+  }
 }
