init iphone about page styles

--- a/styles/pages/about/content.scss
+++ b/styles/pages/about/content.scss
@@ -19,6 +19,20 @@
   &:nth-child(8) {
     justify-content: flex-start;
   }
+
+  // &:nth-child(9) {
+  //   margin-top: 40rem;
+  // }
+
+  @include media('<phone') {
+    &:nth-child(5) {
+      justify-content: flex-end;
+    }
+
+    &:nth-child(8) {
+      justify-content: flex-start;
+    }
+  }
 }
 .about__content__wrapper{
   display: flex;
@@ -26,16 +40,62 @@
   .about__content--right &{
     flex-direction: row-reverse;
   }
+
+  @include media('<phone') {
+    .about__content:nth-child(3) & {
+      flex-direction: column-reverse;
+    }
+
+    .about__content:nth-child(5) & {
+      flex-direction: column;
+    }
+
+    .about__content:nth-child(8) & {
+      flex-direction: column-reverse;
+    }
+
+    .about__content:nth-child(9) & {
+      flex-direction: column-reverse;
+    }
+  }
 }
 
 .about__content__box{
   display: flex;
+
+  @include media('<=phone') {
+    margin: auto;
+    width: 60.9rem;
+
+    .about__content:nth-child(3) & {
+      margin-top: 10rem;
+    }
+
+    .about__content:nth-child(5) & {
+      margin-bottom: 10rem;
+    }
+
+    .about__content:nth-child(8) & {
+      margin-top: 10rem;
+    }
+
+    .about__content:nth-child(9) & {
+      margin-top: 10rem;
+    }
+  }
 }
 
 .about__content__label{
   @extend %description-12;
   width: 18rem;
   text-transform: uppercase;
+
+  @include media('<=phone') {
+    font-size: 2.4rem;
+    line-height: 1.5;
+    padding-right: 2.5rem;
+    width: 15rem;
+  }
 }
 
 .about__content__description{
@@ -44,6 +104,10 @@
 
   p:not(:first-child){
     margin-top: 2.5rem;
+  }
+
+  @include media('<=phone') {
+    width: calc(100% - 15rem);
   }
 }
 .about__content__media{
@@ -71,6 +135,32 @@
     width: 61rem;
     height: 86rem;
     margin-left: 22rem;
+  }
+
+  @include media('<=phone') {
+    .about__content:nth-child(3) & {
+      height: 91.4rem;
+      margin-left: 0;
+      width: 60.9rem;
+    }
+
+    .about__content:nth-child(5) & {
+      height: 50rem;
+      margin-left: 0;
+      width: 100vw;
+    }
+
+    .about__content:nth-child(8) & {
+      height: 52rem;
+      margin-right: 0;
+      width: 100vw;
+    }
+
+    .about__content:nth-child(9) & {
+      height: 85.8rem;
+      margin-left: 0;
+      width: 60.8rem;
+    }
   }
 }
 .about__content__media__img{
