--- a/styles/pages/about/highlight.scss
+++ b/styles/pages/about/highlight.scss
@@ -19,6 +19,16 @@
   .about__highlight:nth-child(4) & {
     width: 104rem;
   }
+
+  @include media('<=phone') {
+    height: 316.2rem;
+    width: 100%;
+
+    .about__highlight:nth-child(4) & {
+      height: 119.3rem;
+      width: 100%;
+    }
+  }
 }
 .about__highlight__label{
   @extend %description-12;
@@ -28,12 +38,27 @@
   font-weight: normal;
   letter-spacing: 0.1rem;
   width: 12rem;
+
+  @include media('<=phone') {
+    font-size: 2.4rem;
+    margin-top: 6.5rem;
+    top: 90rem;
+    width: 19rem;
+  }
 }
 .about__highlight__title{
-  @extend %absolute-center;
-  transform: translate(-50%, -70%) rotate(-90deg);
   @extend %title-200;
-  padding-bottom: 4rem;
+  padding-bottom: 2rem;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-90deg);
+
+  @include media('<=phone') {
+    font-size: 30rem;
+    margin-top: 6.5rem;
+  }
 }
 .about__highlight__media{
   position: absolute;
@@ -52,6 +77,25 @@
   &:last-child{
     bottom: 0;
     right: 0;
+  }
+
+  @include media('<=phone') {
+    .about__highlight:last-child & {
+      height: 76rem;
+      width: 54rem;
+
+      &:first-child {
+        left: 50%;
+        top: 0;
+        transform: translateX(-50%);
+      }
+
+      &:last-child {
+        bottom: 0;
+        right: 50%;
+        transform: translateX(50%);
+      }
+    }
   }
 }
 .about__highlight__media__img{
