--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -20,11 +20,11 @@ block content
           section.about__content(class=`${section.primary.type === 'Left' ? 'about__content--left' : 'about__content--right'}`)
             .about__content__wrapper
               .about__content__box
-                p.about__content__label=section.primary.label
+                p.about__content__label!=section.primary.label
                 .about__content__description!=PrismicDOM.RichText.asHtml(section.primary.description)
 
               figure.about__content__media
-                img.about__content__media__img(src=section.primary.image.url alt=section.primary.image.alt)
+                img.about__content__media__image(src=section.primary.image.url alt=section.primary.image.alt)
 
         if section.slice_type == 'highlight'
           section.about__highlight
@@ -37,7 +37,7 @@ block content
               .about__hightlight__medias
                 each media in section.items
                   figure.about__highlight__media
-                    img.about__highlight__media__img(src=media.image.url alt=media.image.alt)
+                    img.about__highlight__media__image(src=media.image.url alt=media.image.alt)
 
         if section.slice_type == 'gallery'
           section.about__gallery
