--- a/views/pages/collections.pug
+++ b/views/pages/collections.pug
@@ -29,6 +29,12 @@ block content
             h2.collections__article__title=`${collection.data.title} ${home.data.collection}`
             p.collections__article__description=collection.data.description
 
+      .collections__mobile
+        each collection, index in collections
+          .collections__mobile__item
+            .collections__mobile__item__label!=`${home.data.collection}<br>${Numbers(index)}`
+            .collections__mobile__item__title=collection.data.title
+
       button.detail__button
         span Close
 
