--- a/styles/pages/about/highlight.scss
+++ b/styles/pages/about/highlight.scss
@@ -1,19 +1,19 @@
-.about__highlight{
-  width: 125.8rem;
-  height: 104rem;
-  margin:20rem auto;
+.about__highlight {
+  margin: 20rem 0;
 
-  &:first-child{
+  &:first-child {
     margin-top: 0;
   }
-  &:last-child{
+
+  &:last-child {
     margin-bottom: 0;
   }
 }
-.about__highlight__wrapper{
+
+.about__highlight__wrapper {
+  position: relative;
   width: 144rem;
   height: 104rem;
-  position: relative;
   margin: auto;
 
   .about__highlight:nth-child(4) & {
@@ -21,23 +21,28 @@
   }
 
   @include media('<=phone') {
-    height: 316.2rem;
     width: 100%;
+    height: 316.2rem;
 
     .about__highlight:nth-child(4) & {
-      height: 119.3rem;
       width: 100%;
+      height: 119.3rem;
     }
   }
 }
-.about__highlight__label{
+
+.about__highlight__label {
   @extend %description-12;
-  text-transform: uppercase;
+
+  position: absolute;
+  top: 9rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 9.6rem;
+
   text-align: center;
-  margin: auto;
-  font-weight: normal;
+  text-transform: uppercase;
   letter-spacing: 0.1rem;
-  width: 12rem;
 
   @include media('<=phone') {
     font-size: 2.4rem;
@@ -46,8 +51,18 @@
     width: 19rem;
   }
 }
-.about__highlight__title{
+
+.about__highlight__link[href] {
+  transition: color 0.4s ease;
+
+  &:hover {
+    color: $color-white;
+  }
+}
+
+.about__highlight__title {
   @extend %title-200;
+
   padding-bottom: 2rem;
 
   position: absolute;
@@ -60,29 +75,32 @@
     margin-top: 6.5rem;
   }
 }
-.about__highlight__media{
-  position: absolute;
+
+.about__highlight__media {
   width: 54rem;
   height: 76rem;
+  overflow: hidden;
+  position: absolute;
 
   .about__highlight:nth-child(4) & {
-    height: 52.8rem;
     width: 36rem;
+    height: 52.8rem;
   }
 
-  &:first-child{
-    top: 0;
+  &:first-child {
     left: 0;
+    top: 0;
   }
-  &:last-child{
+
+  &:last-child {
     bottom: 0;
     right: 0;
   }
 
   @include media('<=phone') {
     .about__highlight:last-child & {
-      height: 76rem;
       width: 54rem;
+      height: 76rem;
 
       &:first-child {
         left: 50%;
@@ -98,7 +116,8 @@
     }
   }
 }
-.about__highlight__media__img{
+
+.about__highlight__media__image {
   @extend %cover;
   object-fit: cover;
 }
