--- a/styles/pages/collections/collections.scss
+++ b/styles/pages/collections/collections.scss
@@ -1,14 +1,27 @@
-.collections{
-  @extend %cover;
+.collections {
+  @extend %page;
+
   background: $color-quicksand;
   color: $color-quarter-spanish-white;
+  z-index: 0;
+
+  &--active {
+    @extend %page--active;
+  }
 }
-.collections__wrapper{
+
+.collections__wrapper {
   @extend %cover;
+
   overflow: hidden;
 }
+
 .collections__titles {
   @extend %vertical-titles;
+}
+
+.collections__titles__wrapper {
+
 }
 
 .collections__titles__label {
@@ -21,56 +34,141 @@
 
 .collections__titles__title {
   @extend %vertical-titles__title;
+
+  .collections__titles__item:nth-child(1) & {
+    height: 28.6rem;
+  }
+
+  .collections__titles__item:nth-child(2) & {
+    height: 45.1rem;
+  }
+
+  .collections__titles__item:nth-child(3) & {
+    height: 53.1rem;
+  }
+
+  .collections__titles__item:nth-child(4) & {
+    height: 28.8rem;
+  }
 }
 
 .collections__titles__title__text {
   @extend %vertical-titles__title__text;
 }
 
-
-
-.collections__gallery{
+.collections__gallery {
   @extend %cover;
+
+  visibility: hidden;
+  z-index: 1;
 }
-.collections__gallery__wrapper{
-  @extend %absolute-center;
+
+.collections__gallery__wrapper {
   display: flex;
   align-items: center;
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-44.7rem * 0.5, -50%);
 }
-.collections__gallery__link{
+
+.collections__gallery__link {
   display: block;
-  margin: 0 5.3rem;
+  padding: 0 5.3rem;
+
+  &:first-child {
+    padding-left: 0;
+  }
+
+  &:last-child {
+    padding-right: 0;
+  }
 }
-.collections__gallery__media{
+
+.collections__gallery__media {
   position: relative;
-  width: 44.7rem;
-  height: 63.1rem;
+  // visibility: hidden;
+  width: 44.7rem * 0.8;
+  height: 63.1rem * 0.8;
 }
-.collections__gallery__media__image{
+
+.collections__gallery__media__image {
   @extend %cover;
   object-fit: cover;
 }
 
-
-.collections__content{
+.collections__content {
   @extend %cover;
-}
-.collections__article{
-  position: absolute;
-  left: 8rem;
-  bottom: 8.7rem;
 
-  opacity:0;
-
-  &--active{
-    opacity: 1;
+  @include media('<phone') {
+    display: none;
   }
 }
-.collections__article__title{
-  @extend %title-60;
+
+.collections__article {
+  position: absolute;
+  bottom: 8rem;
+  left: 8rem;
 }
-.collections__article__description{
-  @extend %description-16;
+
+.collections__article__title {
+  @extend %title-60;
+
+  line-height: 1;
+  margin-bottom: 1.5rem;
+  overflow: hidden;
+}
+
+.collections__article__title__text {
+  display: inline-block;
+  transform: translateY(100%);
+  transition: transform 1s $ease-in-out;
+
+  .collections__article--active & {
+    transform: translateY(0);
+    transition-delay: 1s;
+  }
+}
+
+.collections__article__description {
+  @extend %description-18;
   max-width: 48rem;
   margin-top: 1.6rem;
+}
+
+.collections__mobile {
+  position: absolute;
+  bottom: 5rem;
+  display: none;
+
+  @include media('<phone') {
+    display: flex;
+  }
+}
+
+.collections__mobile__item {
+  width: 100vw;
+  padding-left: 5rem;
+}
+
+.collections__mobile__item__label {
+  font-size: 2rem;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+}
+
+.collections__mobile__item__title {
+  font-family: $font-george-x;
+  font-size: 12rem;
+}
+
+.collections__button {
+  width: 44.7rem;
+  height: 63.1rem;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
