--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -1,10 +1,14 @@
 .home {
-  @extend %cover;
   @extend %center;
+  @extend %page;
 
   background: $color-contessa;
   color: $color-quarter-spanish-white;
   text-align: center;
+}
+
+.home__wrapper {
+  @extend %cover;
 
   &:before,
   &:after{
@@ -25,11 +29,6 @@
     background: linear-gradient(to top, $color-contessa 0%, rgba($color-contessa, 0) 100%);
     bottom: 0;
   }
-}
-
-.home__wrapper {
-  // @extend %cover;
-  // overflow: hidden;
 }
 
 .home__titles {
@@ -54,33 +53,66 @@
 }
 
 .home__gallery{
+  display: flex;
+  flex-wrap: wrap;
 
-}
-.home__gallery__media{
+  width: 100%;
+
+  padding: 0 2.5rem;
   position: absolute;
-}
-.home__gallery__media__image{
-
-}
-.home__link{
-  width: 32rem;
-  height: 6rem;
-
-  position: absolute;
+  top: 0;
   left: 50%;
-  bottom: 5rem;
   transform: translateX(-50%);
 
-  text-align: center;
+  // for now
+  visibility: hidden;
+
+  @include media('<=phone') {
+    padding: 0 1.5rem;
+  }
+}
+.home__gallery__media{
+  padding: 2.5rem;
+  width: 20%;
+}
+.home__gallery__media__image{
+  display: block;
+  width: 100%;
+}
+.home__link {
+  @extend %description-14;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: absolute;
+  bottom: 5rem;
+  left: 50%;
+  transform: translateX(-50%);
+
+  width: 28.8rem;
+  height: 6rem;
+
   letter-spacing: 0.05rem;
+  text-transform: uppercase;
+
   z-index: 2;
 
-  span{
-    @extend %description-14;
-    @extend %absolute-center;
-    text-transform: uppercase;
-    width: 100%;
-    height: 100%;
-    line-height: 6.5rem;
+  span {
+    position: relative;
+    display: inline-block;
+    line-height: 1;
+    vertical-align: middle;
   }
+
+  @include media('<phone') {
+    width: 55rem;
+    height: 13.7rem;
+    bottom: 7.5rem;
+  }
+}
+
+.home__link__icon {
+  @extend %cover;
 }
