alternative to spread, selecting html in js

--- a/views/base.pug
+++ b/views/base.pug
@@ -12,11 +12,11 @@ html(lang="en")
     meta(name="description" content=metadata.data.description)
 
     //- favicons for every device
-    link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
-    link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
-    link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
-    link(rel="manifest" href="/site.webmanifest")
-    link(rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff3a00")
+    //- link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
+    //- link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
+    //- link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
+    //- link(rel="manifest" href="/site.webmanifest")
+    //- link(rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff3a00")
 
     meta(property="og:type" content="website")
     meta(property="og:title" content=metadata.data.title)
