--- a/styles/components/preloader.scss
+++ b/styles/components/preloader.scss
@@ -5,14 +5,20 @@
   color: $color-quarter-spanish-white;
   text-align: center;
 
-  //for now
-  display: none;
-
   z-index: z('preloader');
 }
 .preloader__text{
-  @extend %title-53;
   max-width: 66rem;
+  font-size: 0;;
+
+  span{
+    display: inline-block;
+    overflow: hidden;
+  }
+
+  span span{
+    @extend %title-53;
+  }
 }
 
 .preloader__number{
@@ -22,7 +28,13 @@
   left: 50%;
   transform: translateX(-50%);
 
+  overflow: hidden;
+
   @include media('<phone') {
     font-size: 2.4rem;
   }
+}
+
+.preloader__number__text{
+  display: inline-block;
 }
