--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -17,7 +17,7 @@ block content
       .home__gallery
       each media in home.data.gallery
         figure.home__gallery__media
-          img.home__gallery__media__image(src=media.image.url alt=media.image.alt)
+          img.home__gallery__media__image(data-src=media.image.url alt=media.image.alt)
 
       a.home__link(href=Link(home.data.collections))
         span=home.data.label
