--- a/styles/shared/pages.scss
+++ b/styles/shared/pages.scss
@@ -2,7 +2,7 @@
   @extend %cover;
 
   //later for javascript!!
-  opacity: 0;
+  // opacity: 0;
   // visibility: hidden;
   z-index: z('content');
 }
