testing new animations - test1

--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -47,3 +47,12 @@ button{
 .content{
   @extend %cover;
 }
+[data-animation="title"],
+[data-animation="label"],
+[data-animation="paragraph"]{
+  span{
+    display: inline-block;
+    overflow: hidden;
+    vertical-align: top;
+  }
+}
