--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -20,8 +20,9 @@ block content
           section.about__content(class=`${section.primary.type === 'Left' ? 'about__content--left' : 'about__content--right'}`)
             .about__content__wrapper
               .about__content__box
-                p.about__content__label!=section.primary.label
-                .about__content__description!=PrismicDOM.RichText.asHtml(section.primary.description)
+                p.about__content__label(data-animation="label")!=section.primary.label
+
+                .about__content__description!=PrismicDOM.RichText.asHtml(section.primary.description).replace(/<p>/g, '<p data-animation="paragraph">')
 
               figure.about__content__media
                 img.about__content__media__image(data-src=section.primary.image.url alt=section.primary.image.alt)
@@ -30,7 +31,7 @@ block content
           section.about__highlight
             .about__highlight__wrapper
               if section.primary.label
-                p.about__highlight__label=section.primary.label
+                p.about__highlight__label(data-animation="label")=section.primary.label
 
               h3.about__highlight__title(data-animation="title")=section.primary.title
 
