--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -22,7 +22,9 @@ block content
               .about__content__box
                 p.about__content__label(data-animation="label")!=section.primary.label
 
-                .about__content__description!=PrismicDOM.RichText.asHtml(section.primary.description).replace(/<p>/g, '<p data-animation="paragraph">')
+                .about__content__description(data-animation="paragraph")!=PrismicDOM.RichText.asHtml(section.primary.description)
+                //- replace not working
+                //- .about__content__description!=PrismicDOM.RichText.asHtml(section.primary.description).replace(/\<p>/g, '<p data-animation="paragraph">')
 
               figure.about__content__media
                 img.about__content__media__image(data-src=section.primary.image.url alt=section.primary.image.alt)
@@ -33,7 +35,7 @@ block content
               if section.primary.label
                 p.about__highlight__label(data-animation="label")=section.primary.label
 
-              h3.about__highlight__title(data-animation="title")=section.primary.title
+              h3.about__highlight__title(data-animation="highlight")=section.primary.title
 
               .about__hightlight__medias
                 each media in section.items
