--- a/styles/pages/about/about.scss
+++ b/styles/pages/about/about.scss
@@ -2,9 +2,9 @@
   @extend %page;
 
   // For now (styling part)
-  background: $color-cadet-blue;
-  color: $color-bright-gray;
-  height: auto;
+  // background: $color-cadet-blue;
+  // color: $color-bright-gray;
+  // height: auto;
 
   &--active {
     @extend %page--active;
