--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -2,8 +2,8 @@
   @extend %center;
   @extend %page;
 
-  background: $color-contessa;
-  color: $color-quarter-spanish-white;
+  // background: $color-contessa;
+  // color: $color-quarter-spanish-white;
   text-align: center;
 }
 
@@ -53,31 +53,127 @@
 }
 
 .home__gallery{
-  display: flex;
-  flex-wrap: wrap;
+  @extend %cover;
+  height: 172.5rem;
+  width: 241.8rem;
+  // display: flex;
+  // flex-wrap: wrap;
 
-  width: 100%;
+  // width: 100%;
 
-  padding: 0 2.5rem;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  // padding: 0 2.5rem;
+  // position: absolute;
+  // top: 0;
+  // left: 50%;
+  // transform: translateX(-50%);
 
-  // for now
-  visibility: hidden;
 
-  @include media('<=phone') {
-    padding: 0 1.5rem;
-  }
+  // @include media('<=phone') {
+  //   padding: 0 1.5rem;
+  // }
 }
 .home__gallery__media{
-  padding: 2.5rem;
-  width: 20%;
+  // padding: 2.5rem;
+  // width: 20%;
+  position: absolute;
+
+  &:nth-child(1) {
+    width: 27.8rem;
+    height: 41.8rem;
+    top: 16.4rem;
+    left: 9.4rem;
+  }
+  &:nth-child(2) {
+    width: 27.8rem;
+    height: 41.8rem;
+    top: 19.2rem;
+    left: 54.1rem;
+  }
+  &:nth-child(3) {
+    width: 27.8rem;
+    height: 41.8rem;
+    top: 10.7rem;
+    left: 106.3rem;
+  }
+  &:nth-child(4) {
+    width: 40.6rem;
+    height: 60.8rem;
+    top: 0;
+    left: 154.1rem;
+  }
+  &:nth-child(5) {
+    width: 27.8rem;
+    height: 41.8rem;
+    top: 10.7rem;
+    left: 207rem;
+  }
+  &:nth-child(6) {
+    width: 37.5rem;
+    height: 52.3rem;
+    top: 69.1rem;
+    left: 0;
+  }
+  &:nth-child(7) {
+    width: 40.6rem;
+    height: 60.8rem;
+    top: 66.2rem;
+    left: 46.7rem;
+  }
+  &:nth-child(8) {
+    width: 39.7rem;
+    height: 58.2rem;
+    top: 64.7rem;
+    left: 101.5rem;
+  }
+  &:nth-child(9) {
+    width: 27.8rem;
+    height: 41.8rem;
+    top: 63.8rem;
+    left: 160rem;
+  }
+  &:nth-child(10) {
+    width: 39.7rem;
+    height: 58.2rem;
+    top: 64.7rem;
+    left: 202.1rem;
+  }
+  &:nth-child(11) {
+    width: 27.8rem;
+    height: 41.8rem;
+    top: 128.9rem;
+    left: 13.1rem;
+  }
+  &:nth-child(12) {
+    width: 27.8rem;
+    height: 41.8rem;
+    top: 130.4rem;
+    left: 54.1rem;
+  }
+  &:nth-child(13) {
+    width: 27.8rem;
+    height: 41.8rem;
+    top: 128.6rem;
+    left: 105.7rem;
+  }
+  &:nth-child(14) {
+    width: 27.8rem;
+    height: 41.8rem;
+    top: 110.9rem;
+    left: 164.7rem;
+  }
+  &:nth-child(15) {
+    width: 27.8rem;
+    height: 41.8rem;
+    top: 128.6rem;
+    left: 206.4rem;
+  }
+
 }
 .home__gallery__media__image{
-  display: block;
-  width: 100%;
+  // display: block;
+  // width: 100%;
+  @extend %cover;
+  opacity: 1;
 }
 .home__link {
   @extend %description-14;
