--- a/views/pages/detail.pug
+++ b/views/pages/detail.pug
@@ -4,7 +4,7 @@ block variables
   - var template = 'detail'
 
 block content
-  .detail
+  .detail(data-background="#BC978C" data-color="#F9F1E7")
     .detail__wrapper
       figure.detail__media
         img.detail__media__image(data-src=product.data.image.url alt=product.data.image.alt)
