--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -55,7 +55,7 @@
 .home__gallery{
   @extend %cover;
   height: 172.5rem;
-  width: 241.8rem;
+  width: 241.8rem + 9rem;
   visibility: hidden;
 }
 .home__gallery__media{
