--- a/styles/pages/collections/collections.scss
+++ b/styles/pages/collections/collections.scss
@@ -18,11 +18,13 @@
 
 .collections__titles {
   @extend %vertical-titles;
+
+  transition: transform 1s ease;
+
+  @include media('<phone') {
+    display: none;
+  }
 }
-
-// .collections__titles__wrapper {
-
-// }
 
 .collections__titles__label {
   @extend %vertical-titles__label;
@@ -34,6 +36,7 @@
 
 .collections__titles__title {
   @extend %vertical-titles__title;
+  transform: rotate(-90deg);
 
   .collections__titles__item:nth-child(1) & {
     height: 28.6rem;
@@ -52,14 +55,14 @@
   }
 }
 
-.collections__titles__title__text {
-  @extend %vertical-titles__title__text;
-}
+// .collections__titles__title__text {
+//   @extend %vertical-titles__title__text;
+// }
 
 .collections__gallery {
   @extend %cover;
 
-  visibility: hidden;
+  // visibility: hidden;
   z-index: 1;
 }
 
@@ -88,7 +91,7 @@
 
 .collections__gallery__media {
   position: relative;
-  // visibility: hidden;
+  visibility: hidden;
   width: 44.7rem * 0.8;
   height: 63.1rem * 0.8;
 }
@@ -110,6 +113,12 @@
   position: absolute;
   bottom: 8rem;
   left: 8rem;
+  transition: opacity .4s ease;
+
+  &--active{
+    opacity: 1;
+    transition-delay: .4s;
+  }
 }
 
 .collections__article__title {
