performance improvements + textures preload to GPU

--- a/views/base.pug
+++ b/views/base.pug
@@ -38,4 +38,7 @@ html(lang="en")
     .content#content(data-template=template)
       block content
 
+    script.
+      window.ASSETS = !{JSON.stringify(assets).replace(/<\//g, "<\\/")}
+
     script(src="main.js")
