--- a/views/pages/collections.pug
+++ b/views/pages/collections.pug
@@ -10,7 +10,7 @@ block content
         each collection, index in collections
           .collections__titles__label!=`${home.data.collection}<br>${Numbers(index)}`
           .collections__titles__title=collection.data.title
-
+        
         each collection, index in collections
           .collections__titles__label!=`${home.data.collection}<br>${Numbers(index)}`
           .collections__titles__title=collection.data.title
@@ -18,7 +18,6 @@ block content
         each collection, index in collections
           .collections__titles__label!=`${home.data.collection}<br>${Numbers(index)}`
           .collections__titles__title=collection.data.title
-
 
       .collections__gallery
         .collections__gallery__wrapper
@@ -42,9 +41,5 @@ block content
             .collections__mobile__item__label!=`${home.data.collection}<br>${Numbers(index)}`
             .collections__mobile__item__title=collection.data.title
 
-      button.detail__button
-        span Close
 
-        svg.detail__button__icon(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 124 60")
-          path(fill="none" stroke="#fff" opacity="0.4" d="M62,0.5c33.97,0,61.5,13.21,61.5,29.5S95.97,59.5,62,59.5S0.5,46.29,0.5,30S28.03,0.5,62,0.5z")
-          path(fill="none" stroke="#fff" d="M62,0.5c33.97,0,61.5,13.21,61.5,29.5S95.97,59.5,62,59.5S0.5,46.29,0.5,30S28.03,0.5,62,0.5z")
+      //- button.collections__button Redirect User
