--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -8,11 +8,8 @@ block content
     .home__wrapper
       .home__titles
         each collection, index in collections
-          .home__titles__label
-            .home__titles__label__text!=`${home.data.collection}<br>${Numbers(index)}`
-
-          .home__titles__title
-            .home__titles__title__text=collection.data.title
+          .home__titles__label=`${home.data.collection} ${Numbers(index)}`
+          .home__titles__title=collection.data.title
 
       .home__gallery
         each media in home.data.gallery
