--- a/styles/shared/vertical-titles.scss
+++ b/styles/shared/vertical-titles.scss
@@ -1,61 +1,28 @@
 %vertical-titles {
-  left: 50%;
   position: absolute;
-  top: 0;
-  transform: translateX(-50%);
+  align-items: center;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(-90deg);
+  display: flex;
 }
 
 %vertical-titles__label {
   @extend %description-12;
 
-  height: 16rem;
-  letter-spacing: 0.1rem;
-  position: relative;
+  transform: rotate(90deg);
   text-align: center;
   text-transform: uppercase;
+  margin: 0 3rem;
+  letter-spacing: 0.1;
 
   @include media('<phone') {
     font-size: 1.2rem;
   }
 }
 
-%vertical-titles__label__text {
-  display: inline-block;
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: 10rem;
-  line-height: 1.5;
-}
-
 %vertical-titles__title {
   @extend %title-200;
 
-  position: relative;
-
-  &:nth-child(2) {
-    height: 28.6rem;
-  }
-
-  &:nth-child(4) {
-    height: 45.1rem;
-  }
-
-  &:nth-child(6) {
-    height: 53.1rem;
-  }
-
-  &:nth-child(8) {
-    height: 28.8rem;
-  }
-}
-
-%vertical-titles__title__text {
-  display: inline-block;
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%) rotate(-90deg);
-  white-space: nowrap;
+  padding-top: 2rem;
 }
